syntax = "proto3";

package protoBackend;
option go_package = "v2ray-stat/backend/proto";

service BackendService {
  // Bidirectional streaming RPC для обмена данными
  rpc StreamUsers(stream GetUsersRequest) returns (stream GetUsersResponse) {}
  // Сохраняем существующие unary RPC, если нужны
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {}
  rpc GetSubscriptionUsers(GetUsersRequest) returns (GetUsersResponse) {}
}

message GetUsersRequest {}

message GetUsersResponse {
  repeated BackendUsers node_users = 1;
}

message BackendUsers {
  string node_name = 1;
  string address = 2;
  string port = 3;
  repeated User users = 4;
}

message User {
  string user = 1;
  repeated IdEntry inbounds = 2;
  string rate = 3;
  string enabled = 4;
  int64 created = 5;
  int64 sub_end = 6;
  int32 renew = 7;
  int32 lim_ip = 8;
  string ips = 9;
  int64 uplink = 10;
  int64 downlink = 11;
  int64 traffic_cap = 12;
}

message IdEntry {
  string inbound_tag = 1;
  string id = 2;
}
